[gd_scene load_steps=11 format=3 uid="uid://cwx2814ubcxdd"]

[ext_resource type="Texture2D" uid="uid://go4x38csb6ic" path="res://Resources/Textures/UI/clean.png" id="1_icppb"]
[ext_resource type="Script" path="res://Scripts/UI/pot_selector.gd" id="1_w8mg7"]
[ext_resource type="Texture2D" uid="uid://44x40mrmo66f" path="res://Resources/Textures/UI/love.png" id="2_rkmjr"]
[ext_resource type="Texture2D" uid="uid://dtnb0a3gr7frm" path="res://Resources/Textures/flowerpot1.png" id="3_dc7qo"]
[ext_resource type="Script" path="res://Scripts/FlowerSprite2D.gd" id="5_owgnk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqjq0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lcsb8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2jhyb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7d1dl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_70vhd"]

[node name="PotSelector" type="Node2D"]
script = ExtResource("1_w8mg7")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
offset_left = 231.0
offset_top = 568.0
offset_right = 1087.0
offset_bottom = 654.0
stretch_mode = 3
alignment_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer"]
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="left" type="Button" parent="AspectRatioContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_eqjq0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lcsb8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2jhyb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7d1dl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_70vhd")
icon = ExtResource("1_icppb")
alignment = 0

[node name="right" type="Button" parent="AspectRatioContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_eqjq0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lcsb8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2jhyb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7d1dl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_70vhd")
icon = ExtResource("2_rkmjr")
alignment = 0

[node name="Control" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 537.0
offset_top = 226.0
offset_right = 789.0
offset_bottom = 494.0
grow_horizontal = 2
grow_vertical = 2

[node name="flowerpot" type="Sprite2D" parent="Control"]
position = Vector2(127, 150.5)
texture = ExtResource("3_dc7qo")
script = ExtResource("5_owgnk")

[node name="leftMarker" type="Marker2D" parent="Control"]
position = Vector2(-156, 140.5)

[node name="rightMarker" type="Marker2D" parent="Control"]
position = Vector2(386, 143)

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
offset_right = 1284.0
offset_bottom = 124.0

[node name="Label" type="Label" parent="AspectRatioContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Select your pot!"
horizontal_alignment = 3

[connection signal="button_down" from="AspectRatioContainer/HBoxContainer/left" to="." method="_on_left_button_down"]
[connection signal="button_down" from="AspectRatioContainer/HBoxContainer/right" to="." method="_on_right_button_down"]
